--- a/clc_web_services.info.yml
+++ b/clc_web_services.info.yml
@@ -1,5 +1,5 @@
 name: 'CLC Web Services'
 type: module
-description: 'Manage connections to the web services and functionallity'
+description: 'Manage connections to the web services and functionality'
 core: 8.x
 package: 'Custom'
